# altran_iai_maps

./: CMakeLists.txt
Media/models/: cash_register.xacro.in  chair.xacro.in  cnc.xacro.in  glasses.xacro.in  test_glasses.xacro.in  wine_cooler.xacro.in
Media/models/meshes/: ville1.stl
defs/: util_defs.xacro.in
defs/ias_kitchen/: cuboid.xacro.in  fridge_block.xacro.in  furniture_defs.xacro.in  island_block.xacro.in  oven_block.xacro.in  shopping_block.xacro.in  sink_block.xacro.in  small_table.xacro.in  staircase.xacro.in  table.xacro.in
room/: allInOne.xacro.in  colorTest.xacro.in  lab_macros.xacro.in  test.xacro.in  ville1.xacro.in
